# agent-bridge

./: .windsurfrules  AGENTS.md  Makefile  README.md  llms.txt  pyproject.toml
.cursor/agents/: backend-specialist.md  code-archaeologist.md  database-architect.md  debugger.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  frontend-specialist.md  game-developer.md  mobile-developer.md  orchestrator.md  penetration-tester.md  performance-optimizer.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md  security-auditor.md  seo-specialist.md  test-engineer.md
.cursor/rules/: behavioral-modes.mdc  clean-code.mdc  database-design.mdc  mobile-design.mdc  nextjs-react-expert.mdc  project-instructions.mdc  python-patterns.mdc  tailwind-patterns.mdc  testing-patterns.mdc
.github/agents/: backend-specialist.md  code-archaeologist.md  database-architect.md  debugger.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  frontend-specialist.md  game-developer.md  mobile-developer.md  orchestrator.md  penetration-tester.md  performance-optimizer.md  product-manager.md  product-owner.md  project-planner.md  (+4 more)
.opencode/: mcp.json  opencode.json
scripts/: pre-commit.sh  quick-check.sh
tests/: conftest.py  test_capture_service.py  test_cli_snapshot.py  test_converters.py  test_copilot_converter.py  test_cursor_converter.py  test_kiro_converter.py  test_kiro_reverse_edge.py  test_plugins.py  test_reverse_copilot.py  test_reverse_cursor.py  test_reverse_kiro.py  test_roundtrip.py  test_snapshot_service.py
(+293 files in other folders)
